# pathfinding

./: .clang-format  CMakeLists.txt  format.py
src/: main.cpp
src/constants/: settings.hpp
src/controllers/: main_window_controller.cpp  main_window_controller.hpp
src/controllers/main/: main_window_controller.cpp  main_window_controller.hpp
src/controllers/main/states/: id.hpp  init.cpp  init.hpp  state.cpp  state.hpp
src/views/: main_window.cpp  main_window.hpp  main_window_view.cpp  main_window_view.hpp  main_window_view.ui  map_view.cpp  map_view.hpp  map_view.ui
